--- a/src/config/ajinga-local/component/apply-job.json
+++ b/src/config/ajinga-local/component/apply-job.json
@@ -2,7 +2,7 @@
     "steps": [
         {
             "operation": "get",
-            "url": "http://192.168.244.61:8000/job-detail-new/14629/c/"
+            "#data": "apply_job"
         },
         {
             "operation": "click",
