--- a/flow/package.json
+++ b/flow/package.json
@@ -14,6 +14,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@formily/core": "^2.2.20",
+    "@formily/grid": "^2.2.20",
+    "@formily/json-schema": "^2.2.20",
+    "@formily/react": "^2.2.20",
+    "@formily/reactive": "^2.2.20",
+    "@formily/reactive-react": "^2.2.20",
+    "@formily/shared": "^2.2.20",
     "@reduxjs/toolkit": "^1.3.6",
     "antd": "^4.24.5",
     "babel-types": "^6.26.0",
@@ -36,6 +43,8 @@
     "react-hook-form": "^7.33.1",
     "react-redux": "^7.2.0",
     "react-router-redux": "^4.0.8",
+    "react-sortable-hoc": "^2.0.0",
+    "react-sticky-box": "^0.9.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
