--- a/flow/server/tsconfig.json
+++ b/flow/server/tsconfig.json
@@ -19,7 +19,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "shared/*": ["../shared/*"]
     }
   },
   "include": ["**/*.ts"]
