--- a/flow/package.json
+++ b/flow/package.json
@@ -26,16 +26,19 @@
     "babel-types": "^6.26.0",
     "cross-env": "^7.0.3",
     "detect-port": "^1.5.1",
+    "install": "^0.13.0",
     "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.14.1",
     "koa-body": "^6.0.1",
+    "koa-easy-ws": "^2.1.0",
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
     "next": "^13.0.6",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20",
+    "npm": "^9.6.1",
     "nprogress": "^0.2.0",
     "puppeteer": "^19.7.3",
     "react": "^18.1.0",
